# python-project-lvl1

./: .gitignore  .gitignore.txt  Comands  Makefile  README.md  pyproject.toml  python-project-lvl1 - Shortcut.lnk  test.py
.github/workflow/: superlinter.yml
.github/workflows/: main.yml
Test/: mainY.txt  poetry.txt  poetry_loc.txt  test.py
brain_games/: cli.py  launcher.py
brain_games/games/: NOD_algorithm.py  arithmetic_progression.py  calculator.py  fermat_algorithm.py  game_calculator.py  game_calculcator.py  game_even.py  game_parity.py  game_prime.py  game_progression.py  greatest_common_divisor.py  nod_algorithm.py  parity_check.py  prime_number.py
brain_games/scripts/: NOD_algorithm_script.py  add_functions.py  brain-calc.py  brain-even.py  brain-prime.py  brain_fermat.py  brain_games.py  brain_gcd.py  brain_nod.py  brain_prog.py  calculator.py  calculator_script.py  fermat_algorithm_script.py  greatest_common_divisor.py  greetings.py  launcher.py  parity.py  parity_script.py  prime_number.py  progression.py  progression_script.py
neovic2006_brain_games.egg-info/: PKG-INFO  SOURCES.txt
python-project-lvl1/: Makefile
python-project-lvl1/brain_games/games/: NOD_algorithm.py  game_calculator.py
python-project-lvl1/brain_games/scripts/: add_functions.py  calculator_script.py  parity_script.py
