[tool.poetry]
name = "NeoVic2006_brain_games"
version = "0.9.0"
description = "Updated after third review"
authors = ["Sergey Vengilevskiy <NeoVic2006@gmail.com>"]
repository = "https://github.com/NeoVic2006/python-project-lvl1"
packages = [
  { include = "brain_games" },
]


[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-calc = "brain_games.scripts.calculator_script:main"
brain-prog = "brain_games.scripts.progression_script:main"
brain-nod = "brain_games.scripts.NOD_algorithm_script:main"
brain-fermat = "brain_games.scripts.fermat_algorithm_script:main"
brain-parity = "brain_games.scripts.parity_script:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
