[tool.poetry]
name = "NeoVic2006_brain_games"
version = "1.0.0"
description = "Release with all fixes"
authors = ["Sergey Vengilevskiy <NeoVic2006@gmail.com>"]
repository = "https://github.com/NeoVic2006/python-project-lvl1"
packages = [
  { include = "brain_games" },
]


[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-calc = "brain_games.scripts.calculator:main"
brain-prog = "brain_games.scripts.progression:main"
brain-great = "brain_games.scripts.greatest_common_divisor:main"
brain-prime = "brain_games.scripts.prime_number:main"
brain-parity = "brain_games.scripts.parity:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
