[tool.poetry]
name = "NeoVic2006_brain_games"
version = "1.0.2"
description = "Release with all fixes"
authors = ["Sergey Vengilevskiy <NeoVic2006@gmail.com>"]
repository = "https://github.com/NeoVic2006/python-project-lvl1"
packages = [
  { include = "brain_games" },
]


[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[tool.poetry.scripts]

brain-prog = "brain_games.scripts.brain_prog:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-prime = "brain_games.scripts.brain_prime:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
